# library

./: .gitignore  .gitleaks.toml  .gitleaksignore  Cargo.toml  biome.json  docker-compose.yml  package-lock.json  package.json  rust-toolchain.toml
.sqlx/: query-01d4c97c2d4fe1e2ddfe901da99cd2b7fdc5ad63b4d9b64a4f52e200967c3cdd.json  query-01fd36704834ab85d0edb69a0c7f177aefe3615c68c50ba6a0619967c2a0a9ae.json  query-020f65ab22c003e9d9aa58ef5e6bbf32c45b9062ee8f9ce2e68b3af42621e5ed.json  query-028f29c42f95739fd3c634eb6d2d1b7c5dadd704546278ee48f67192e78b37a6.json  query-0291517f2e0d7e31428aae7d8efbebd22419612acbf68be4fbd2d9c4d406fcf9.json  query-02f1211443a0a27b2fe0592148222f26fe1d425a2e3adac97faaf6a684fa2fe7.json  query-03013eb48017be7da8f8e6d49efd2b1db5dcd5c5974d2817e4528fe45e2b5f9c.json  query-03b0be11722388b0235285fc8ec56c4c2cdbafbdf7a7ee61f77e87942c24e606.json  query-03c88923e93c42c763a5ac7af1e0c3c7ac9700f079117ab6b95804886718405a.json  query-04072a5ee2eeefc8e699131d1312ed94704e78c1c6f68760e7603642f93fc01b.json  query-04a24107977e1d35d59eccdea3bbddb326f53c5fce168aac6a61bde8d71087e4.json  query-04efa69e538a411ac7434946d807d4fcd55e8dbb07e5728c5a0db76bea05e1bc.json  query-04f61dd678a327b91d5b802e2b89fd1a9ccfbb6d4c636b01fd16bd23b1f9fa6d.json  query-058287dc0500e76ffa48a8a7dfcb2250577c005cd753e736ef82902af250631a.json  query-06416b4a4ab99532c62c6a18b4942c8df54a3c85300aab1a553c3c8596fd1015.json  query-0652aac562af18b597f019e5b5d039123128e339e95440e8770a5b1ede5bec70.json  (+505 more)
apps/api/: .env.sample  CHANGELOG.md  Cargo.toml  library.openapi.yaml  openapi.json  schema.graphql
apps/api/migrations/: 20240926081246_init.down.sql  20240926081246_init.up.sql  20241024145956_add_org_username_column.down.sql  20241024145956_add_org_username_column.up.sql  20241114041342_add_is_public_for_repo.down.sql  20241114041342_add_is_public_for_repo.up.sql  20241116030727_add_repo_username.down.sql  20241116030727_add_repo_username.up.sql  20241116034720_replace_repo_id_prefix.down.sql  20241116034720_replace_repo_id_prefix.up.sql  20241116054558_uniq_repo_username_on_org_id.down.sql  20241116054558_uniq_repo_username_on_org_id.up.sql  20250206115014_add_organizations.down.sql  20250206115014_add_organizations.up.sql  20250305075324_platform_id.down.sql  20250305075324_platform_id.up.sql  20250305080000_update_unique_constraints.down.sql  20250305080000_update_unique_constraints.up.sql  20250313002330_add_tags_and_sources.down.sql  20250313002330_add_tags_and_sources.up.sql  20250317023529_remove_platform_id_from_sources.down.sql  20250317023529_remove_platform_id_from_sources.up.sql  20250318092151_add_website_to_organizations.down.sql  20250318092151_add_website_to_organizations.up.sql  20251203204257_add_sync_configs.down.sql  20251203204257_add_sync_configs.up.sql  20251211000000_create_inbound_sync_tables.down.sql  20251211000000_create_inbound_sync_tables.up.sql  20260108000000_add_sync_operations.down.sql  20260108000000_add_sync_operations.up.sql  20260108100000_add_integration_connections.down.sql  20260108100000_add_integration_connections.up.sql  20260115000000_expand_sync_states_data_id.down.sql  20260222100001_add_metadata_to_integration_connections.down.sql  20260222100001_add_metadata_to_integration_connections.up.sql  20260301000000_add_collaborative_documents.down.sql  20260301000000_add_collaborative_documents.up.sql
apps/api/src/: app.rs  config.rs  lib.rs  main.rs  router.rs  sdk_auth.rs
apps/api/src/collaboration/: encoding.rs  handler.rs  manager.rs  mod.rs  persistence.rs  protocol.rs  room.rs
apps/api/src/domain/: mod.rs  organization.rs  policy.rs  role.rs
apps/api/src/domain/repo/: mod.rs  policy.rs  role.rs  source.rs  visibility.rs
apps/api/src/handler/: auth.rs  data.rs  docs.rs  library_executor_extractor.rs  library_org_extractor.rs  mod.rs  openapi.rs  organization.rs  property.rs  repository.rs  source.rs  types.rs
apps/api/src/handler/graphql/: input.rs  mod.rs  model.rs  mutation.rs  resolver.rs  user_resolver.rs
apps/api/src/handler/graphql/input/: source.rs
apps/api/src/handler/graphql/model/: source.rs
apps/api/src/interface_adapter/: mod.rs
apps/api/src/interface_adapter/gateway/: all_repo_query_service.rs  get_organization_by_username_query.rs  get_repo_by_username_query.rs  library_data_repository.rs  mod.rs  organization_repository.rs  repo_repository.rs  source_repository.rs
apps/api/src/usecase/: add_data.rs  add_property.rs  analyze_frontmatter.rs  boundary.rs  bulk_sync_ext_github.rs  change_org_member_role.rs  change_repo_member_role.rs  change_repo_policy.rs  change_repo_username.rs  create_api_key.rs  create_organization.rs  create_pull_request.rs  create_repo.rs  create_source.rs  delete_data.rs  delete_property.rs  delete_repo.rs  delete_source.rs  find_sources.rs  get_markdown_previews.rs  get_properties.rs  get_repo_members.rs  get_repo_policies.rs  get_source.rs  import_markdown_from_github.rs  invite_org_member.rs  invite_repo_member.rs  library_org.rs  list_api_keys.rs  list_github_directory.rs  markdown_composer.rs  mod.rs  remove_repo_member.rs  search_data.rs  search_repo.rs  sign_in.rs  update_data.rs  update_organization.rs  update_property.rs  update_repo.rs  (+5 more)
apps/api/testcase/: auth.yaml
apps/api/testcase/seed/: tenant.yaml
apps/api/tests/: api_key.rs  data.rs  graphql_api_key.rs  import.rs  organization.rs  properties.rs  repos.rs  run_tests.rs  util.rs
apps/api/tests/config/: ci.yaml  default.yaml  docker.yaml
apps/api/tests/scenarios/: inbound_sync_webhook_lifecycle.scenario.md  library_org_member_role.scenario.md  library_organization_lifecycle.scenario.md  library_property_data_lifecycle.scenario.md  library_property_update.scenario.md  library_repo_iam_policy.scenario.md  library_repo_lifecycle.scenario.md  library_repo_member_permission.scenario.md  library_repo_visibility.scenario.md  library_source_and_api_key.scenario.md  rest_library_endpoints.scenario.md
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
sdk/rust/src/auth/: domain.rs  error.rs  executor.rs  mod.rs  test_helper.rs  traits.rs  types.rs
(+302 files in other folders)
