[workspace]
members = [
    "apps/api",
    "packages/database-manager",
    "packages/database-manager/domain",
    "packages/errors",
    "packages/value_object",
    "packages/util",
    "packages/persistence",
    "packages/telemetry",
    "packages/csv_importer",
    "apps/api/packages/inbound_sync",
    "apps/api/packages/inbound_sync/domain",
    "apps/api/packages/outbound_sync",
    "apps/api/packages/outbound_sync/domain",
    "apps/api/packages/github_provider",
    "packages/integration_domain",
    "sdk/rust",
]
resolver = "2"

[workspace.dependencies]
# ---- CLI / Config ----
clap = { version = "4", default-features = false, features = [
    "derive",
    "std",
    "env",
    "help",
    "usage",
    "error-context",
    "suggestions",
] }
dotenvy = "0.15.7"

# ---- Tracing / Telemetry ----
opentelemetry = { version = "0.18.0", default-features = false, features = [
    "trace",
    "rt-tokio",
    "metrics",
] }
opentelemetry-otlp = { version = "0.11.0", default-features = false, features = [
    "grpc-tonic",
    "trace",
    "metrics",
] }
opentelemetry-aws = { version = "0.6.0" }
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-opentelemetry = { version = "0.18.0", default-features = false, features = [
    "tracing-log",
    "metrics",
] }
tracing-subscriber = { version = "0.3.16", features = ["json"] }
sentry = { version = "0.32", features = [
    "backtrace",
    "contexts",
    "panic",
    "debug-images",
    "rustls",
    "reqwest",
], default-features = false }
sentry-tracing = "0.32"

# ---- Core / Serde ----
smart-default = "0.7.1"
anyhow = { version = "1.0.68", features = ["backtrace"] }
base64 = "0.22"
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.95"
sha2 = "0.10"
derive-getters = "0.5.0"
derive-new = "0.7.0"

# ---- Async / Runtime ----
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "process",
], default-features = false }
futures = "0.3"
futures-core = { version = "0.3" }
tokio-stream = "0.1.17"
async-trait = "0.1.68"

# ---- Time ----
chrono = { version = "0.4.38", features = ["serde"] }

# ---- Database ----
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "mysql",
    "chrono",
    "macros",
    "json",
    "bigdecimal",
] }

# ---- URL / Email ----
url = { version = "2.4.0", features = ["serde"] }
email_address = "0.2.4"

# ---- HTTP / Web ----
axum = { version = "0.7", features = [
    "tracing",
    "json",
    "macros",
    "ws",
    "multipart",
] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
hyper = "1.4.1"
tower = "0.5.2"
tower-http = { version = "0.5.2", features = ["cors", "set-header"] }
http = "1.1.0"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "multipart",
    "rustls-tls",
    "stream",
] }

# ---- OpenAPI ----
utoipa = { version = "5.2.0", features = ["debug", "yaml", "chrono", "url"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum", "reqwest"] }
utoipa-rapidoc = { version = "5", features = ["axum"] }
utoipa-redoc = { version = "5", features = ["axum"] }
utoipa-axum = { version = "0.1.2", features = ["debug"] }

# ---- gRPC ----
prost = "0.11.2"
tonic = { version = "0.8.3", features = [
    "rustls-native-certs",
    "tokio-rustls",
    "async-trait",
] }
tonic-build = { version = "0.8.3", features = ["prost"] }

# ---- GraphQL ----
async-graphql = { version = ">=7.0.11, <8.0.0", default-features = false, features = [
    "email-validator",
    "playground",
    "graphiql",
    "tracing",
    "opentelemetry",
    "chrono",
    "string_number",
    "dataloader",
    "smol_str",
    "url",
] }

# ---- Enum / String ----
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
smol_str = { version = "0.3.2", features = ["serde"] }
rust-i18n = "2.2.1"

# ---- Numeric / Decimal ----
bigdecimal = "0.4.7"
rust_decimal = "1.35"
rust_decimal_macros = "1.35"
num = "0.4"

# ---- ID / Bytes ----
ulid = "1.1"
bytes = "1.9.0"
rand = "0.8.5"
once_cell = "1.19.0"
regex = "1.1"

# ---- Lambda ----
lambda_http = "0.13.0"
lambda_runtime = "0.13.0"

# ---- Test ----
mockall = "0.12.1"
rstest = "0.21"
pretty_assertions = "1.4.1"

[profile.dev]
split-debuginfo = "unpacked"
debug = 1
opt-level = 0

[profile.release]
strip = true
